# riscozero

./: .env  cookies.pkl  manage.py  nohup.out  pyproject.toml  requirements.txt
core/: admin.py  fetch.py  forms.py  models.py  surebet.py  views.py
core/migrations/: 0001_initial.py  0002_odd_processed.py  0003_odd_anchor.py  0004_plan_user_plan.py  0005_user_plan_is_active.py  0006_alter_plan_options_alter_user_options_and_more.py  0007_processed.py  0008_plan_amount_plan_months.py  0009_plan_cheap_percent_plan_month_amount.py  0010_user_referer.py  0011_user_whatsapp.py  0012_alter_user_whatsapp.py  0013_alter_user_whatsapp.py  0014_plan_commission_percent.py  0015_alter_odd_house_alter_odd_match_alter_odd_sport_and_more.py  0016_payment.py  0017_alter_payment_identifier_alter_payment_response_and_more.py  0018_payment_plan.py  0019_alter_payment_plan_alter_payment_type_and_more.py  0020_user_time_alter_payment_status.py  0021_alter_user_time.py  0022_user_last_session_key_alter_user_time.py  0023_odd_timestamp.py  0024_user_sports.py  0025_odd_is_live.py  0025_user_plan_expire_alter_payment_plan_and_more.py  0026_plan_has_live.py  0027_alter_plan_has_live.py  0028_odd_live_color.py  0029_plan_live_only.py  0030_merge_20230605_1724.py  (+3 more)
gitold/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
sempregreen/: asgi.py  settings.py  urls.py  wsgi.py
static/: app-base-f3fc6be3261b2fab9abc0f065db5730eacd9bd433fa7c9a1716ab338b343100f.css  application-2297659ed3e1301563b184adae007e911d7e5da19eaf8bde0f9c421e7617da26.js  js
tl/: admin.py  models.py
(+27 files in other folders)
